# vseplanner

./: .gitmodules  README.md
launch/: mav_vsep_arena.yaml  mav_vsep_arena_offline.launch  mav_vsep_machineshop.yaml  mav_vsep_machineshop_offline.launch  sim_nbvp_m100.launch  sim_nbvp_m100.rviz  sim_nbvp_m100.yaml  sim_vsep.launch  sim_vsep.rviz  sim_vsep.yaml  sim_vsep_LMF.launch  sim_vsep_LMF.rviz  sim_vsep_LMF.yaml  sim_vsep_gb.launch  sim_vsep_gb.yaml  sim_vsep_gdb.launch  vsep.rviz  vsep_machineshop.rviz  vsep_planner.launch  vsep_planner_LMF.launch
planner/gazebo_models/gallery_plane/: model.config  model.sdf
planner/gazebo_models/gallery_plane/materials/scripts/: gallery.material
planner/gazebo_models/gallery_wall/: model.config  model.sdf
planner/gazebo_models/gallery_wall/materials/scripts/: brick_box.material
planner/gazebo_models/painting_wall/: model.config  model.sdf
planner/gazebo_models/painting_wall/materials/scripts/: grey_wall.material
planner/interface_nbvp_rotors/: CMakeLists.txt
planner/interface_nbvp_rotors/src/: exploration.cpp
planner/interface_vsep_rotors/: CMakeLists.txt  package.xml
planner/interface_vsep_rotors/src/: exploration.cpp
planner/interface_vsep_rotors/srv/: trigger_planner.srv
planner/interface_vsep_rotors/worlds/: sim_vsep_avg_env.world
planner/kdtree/: CMakeLists.txt
planner/kdtree/src/: kdtree_test.cpp
planner/nbvplanner/: CMakeLists.txt  package.xml
planner/nbvplanner/include/nbvplanner/: nbvp.h  nbvp.hpp  rrt.h  tree.h  tree.hpp
planner/nbvplanner/src/: rrt.cpp
planner/vsep_msgs/: CMakeLists.txt  package.xml
planner/vseplanner/: CMakeLists.txt  package.xml
planner/vseplanner/heading_sample/: buildInfo.mat  codeInfo.mat  diag.cpp  diag.h  eml_rand_mt19937ar_stateful.cpp  eml_rand_mt19937ar_stateful.h  gcGuiReport.mat  heading_sample.cpp  heading_sample.h  heading_sample_data.cpp  heading_sample_data.h  heading_sample_emxAPI.cpp  heading_sample_emxAPI.h  heading_sample_emxutil.cpp  heading_sample_emxutil.h  heading_sample_initialize.cpp  heading_sample_initialize.h  heading_sample_rtw.mk  heading_sample_terminate.cpp  heading_sample_terminate.h  heading_sample_types.h  heading_sample_verify.cpp  heading_sample_verify.h  inv.cpp  inv.h  main.cpp  main.h  norm.cpp  norm.h  parabola_fitting.cpp  parabola_fitting.h  rand.cpp  rand.h  rdivide.cpp  rdivide.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  (+21 more)
planner/vseplanner/heading_sample/examples/: main.cpp  main.h
planner/vseplanner/include/vseplanner/: graph.h  rrt.h  tree.h  tree.hpp  vsep.h  vsep.hpp
planner/vseplanner/src/: graph.cpp  mesh_structure.cpp  rrt.cpp  tree.cpp  vsep.cpp  vseplanner_node.cpp
planner/vseplanner/srv/: octomap_srv.srv
