<?xml version="1.0"?>
<package>
  <name>vsep_msgs</name>
  <version>1.0.0</version>
  <description>Interface</description>

  <maintainer email="tung.dang@nevada.unr.edu">Tung Dang</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  
</package>

